# reminder-cli

./: Cargo.toml  README.md
.github/workflows/: release.yml
Formula/: reminder-cli.rb
src/: cron_parser.rs  daemon.rs  lib.rs  logger.rs  main.rs  notification.rs  reminder.rs  storage.rs  time_parser.rs
