[package]
name = "reminder-cli"
version = "0.1.0"
edition = "2021"
description = "A CLI reminder tool with cron support and system notifications"
license = "MIT"
repository = "https://github.com/Maidang1/reminder-cli"
keywords = ["cli", "reminder", "cron", "notification"]
categories = ["command-line-utilities"]

[[bin]]
name = "reminder"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"
notify-rust = "4.10"
uuid = { version = "1.6", features = ["v4", "serde"] }
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"
daemonize = "0.5"
